--- a/_config.yml
+++ b/_config.yml
@@ -1,27 +1,25 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely edit after that. If you find
-# yourself editing these this file very often, consider using Jekyll's data files
-# feature for the data you need to update frequently.
-#
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'jekyll serve'. If you change this file, please restart the server process.
-
 # Site settings
-# These are used to personalize your new site. If you look in the HTML files,
-# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
-# You can create any custom variable you would like, and they will be accessible
-# in the templates via {{ site.myvariable }}.
-title: Hudson W. Peden
+title: hwp.io
+header-img: img/home-bg.jpg
 email: hudsonpeden@gmail.com
-description: > # this means to ignore newlines until "baseurl:"
-  Design, Photography, and other random things.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://hwp.io" # the base hostname & protocol for your site
-#twitter_username: jekyllrb
+copyright_name: Hudson W. Peden
+description: "Design, Photography, etc."
+baseurl: ""
+url: "http://hwp.io"
+ #twitter_username: SBootstrap
 github_username:  hudsonpeden
+#facebook_username:  StartBootstrap
+email_username:  hudsonpeden@gmail.com
+
+# Google Analytics
+# To enable google analytics, uncomment below line with a valid Google Tracking ID
+# google_tracking_id:
 
 # Build settings
 markdown: kramdown
-theme: minima
+highlighter: rouge
+permalink: pretty
+paginate: 5
+exclude: ["less","node_modules","Gruntfile.js","package.json","README.md", "contact.html"]
+
+gems: [jekyll-paginate, jekyll-feed]
