header bg image updated

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: hwp.io
-header-img: img/home-bg.jpg
+header-img: img/bg.jpg
 email: hudsonpeden@gmail.com
 copyright_name: Hudson W. Peden
 description: "Design, Photography, etc."
